tests/poly_mismatch_tuples.test
let f = fun[T] x: T :: (_,_,_,T->T,_,_,_,_,_,_,T) -> (x,x,x,id!,x,x,x,x,x,x,x,x,);

let _: ([T]. T -> (_,_,_,T->T,_,_,_,_,_,_,_,T))
    = f;
####
TypeError: Value is required to have type [T]. T -> (#0, #1, #3, (T -> T), #4, #5, #6, #7, #8, #9, #2, T) as [+; +; +; +; +; +; +; +; +; +] here:
let f = fun[T] x: T :: (_,_,_,T->T,_,_,_,_,_,_,T) -> (x,x,x,id!,x,x,x,x,x,x,x,x,);
let _: ([T]. T -> (_,_,_,T->T,_,_,_,_,_,_,_,T))
       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
    = f;
However, that value may have type [T]. T -> (#0, #1, #2, (T -> T), #3, #4, #5, #6, #7, #8, T) as [+; +; +; +; +; +; +; +; +] here:
let f = fun[T] x: T :: (_,_,_,T->T,_,_,_,_,_,_,T) -> (x,x,x,id!,x,x,x,x,x,x,x,x,);
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~  
let _: ([T]. T -> (_,_,_,T->T,_,_,_,_,_,_,_,T))
Note: Type mismatch was detected starting from this expression:
let _: ([T]. T -> (_,_,_,T->T,_,_,_,_,_,_,_,T))
    = f;
      ^
